--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.381.0",
     "next": "13.5.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
