--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,13 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.381.0",
     "next": "13.5.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-cookie": "^7.1.4",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0"
   },
