--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
