--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty": "yarn prettier . --write"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.19.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
+    "imagekit": "^5.0.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.381.0",
     "next": "13.5.6",
@@ -32,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prettier": "3.3.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
