--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.3",
+    "@types/imagekit": "^3.1.5",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.0",
     "google-auth-library": "^9.10.0",
+    "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "typescript": "^5.4.5"
