--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "linktr3-libyzxy0",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "pretty": "yarn prettier . --write"
   },
   "dependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.24.7",
     "@cloudinary/url-gen": "^1.19.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
