--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "test": "vitest"
   },
   "author": "libyzxy0",
   "license": "MIT",
@@ -18,11 +19,13 @@
     "@types/jsonwebtoken": "^9.0.6",
     "drizzle-kit": "^0.22.1",
     "express": "^4.19.2",
-    "tsx": "^4.11.0"
+    "tsx": "^4.11.0",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.3",
     "@types/imagekit": "^3.1.5",
+    "@types/nodemailer": "^6.4.15",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -32,6 +35,7 @@
     "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "nodemailer": "^6.9.13",
     "typescript": "^5.4.5"
   }
 }
