fix: fix some redundant codes,and enhance performance

--- a/server/env.example
+++ b/server/env.example
@@ -2,3 +2,6 @@ DRIZZLE_DATABASE_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 JWT_SECRET_KEY=
+NODEMAILER_HOST=
+NODEMAILER_EMAIL=
+NODEMAILER_PASSWORD=
