--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
+    "migrate": "tsx src/utils/migrate.ts", 
     "test": "vitest"
   },
   "author": "libyzxy0",
